k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sv-erp-ingress
  namespace: sv-erp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: erp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sv-erp-app
                port:
                  number: 80
